--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,10 +1,11 @@
 <h2>Information</h2>
 <p><strong>When</strong>: 12 November 2016 (Saturday)</p>
-<p><strong>Where</strong>: Grace Assembly of God Church <a href="https://goo.gl/maps/K7SFeHWKBvQ2">1 Bukit Batok West Ave 4 Singapore 659125</a></p>
+<p><strong>Where</strong>: Grace Assembly of God Church <br>
+  <a href="https://goo.gl/maps/K7SFeHWKBvQ2">1 Bukit Batok West Ave 4 Singapore 659125</a></p>
 
 <h2>Details</h2>
 <ul>
-  <li>Ceremony begins at 5:30 pm</li>
+  <li>Ceremony begins at 9:30 am</li>
   <li>Reception and Lunch immediately follow</li>
   <li>Semiformal</li>
   <li>Rain or Shine</li>
