--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,7 +1,7 @@
 <h2>Information</h2>
 <p><strong>When</strong>: 12 November 2016 (Saturday)</p>
 <p><strong>Where</strong>: Grace Assembly of God Church <br>
-  <a href="https://goo.gl/maps/K7SFeHWKBvQ2">1 Bukit Batok West Ave 4 Singapore 659125</a></p>
+  <a href="https://www.google.com.sg/maps/dir//1+Bukit+Batok+West+Avenue+4,+659125/@1.3616181,103.7404763,15.48z/data=!4m9!4m8!1m0!1m5!1m1!1s0x31da1034b3008f5f:0xad6f11974ff293f4!2m2!1d103.747213!2d1.364453!3e0">1 Bukit Batok West Ave 4 Singapore 659125</a></p>
 
 <h2>Details</h2>
 <ul>
