added jquery + ocanvas

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,10 @@
   <meta property="og:description" content="{{ site.compass.description }}"/>
   <meta property="og:site_name" content="{{ site.compass.tagline }}">
 
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/ocanvas/2.8.1/ocanvas.min.js'></script>
+  <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/ocanvas/2.8.1/ocanvas.min.js'></script> -->
+  <script src="assets/jquery.min.js"></script>
+  <script src="assets/ocanvas.min.js"></script>
   <script src="assets/index.js"></script>
 
   {% if site.compass.include_analytics %}
