added google map

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -3,7 +3,9 @@
 <h2>Information</h2>
 <p><strong>When</strong>: 12 November 2016 (Saturday)</p>
 <p><strong>Where</strong>: Grace Assembly of God Church <br>
-  <a href="https://www.google.com.sg/maps/dir//1+Bukit+Batok+West+Avenue+4,+659125/@1.3616181,103.7404763,15.48z/data=!4m9!4m8!1m0!1m5!1m1!1s0x31da1034b3008f5f:0xad6f11974ff293f4!2m2!1d103.747213!2d1.364453!3e0">1 Bukit Batok West Ave 4 Singapore 659125</a></p>
+  <a href="https://www.google.com.sg/maps/dir//1+Bukit+Batok+West+Avenue+4,+659125/@1.3616181,103.7404763,15.48z/data=!4m9!4m8!1m0!1m5!1m1!1s0x31da1034b3008f5f:0xad6f11974ff293f4!2m2!1d103.747213!2d1.364453!3e0">1 Bukit Batok West Ave 4 Singapore 659125</a>
+<iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d15954.766898960435!2d103.7404763!3d1.3616181!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x31da1034b3008f5f%3A0xad6f11974ff293f4!2s1+Bukit+Batok+West+Avenue+4%2C+659125!3m2!1d1.364453!2d103.747213!5e0!3m2!1sen!2ssg!4v1466519990422" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+</p>
 
 <h2>Details</h2>
 <ul>
