--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,5 +1,5 @@
 <canvas id="canvas"></canvas>
-<embed src="/assets/music.mp3"
+<embed src="assets/music.mp3"
     loop="true"
     autoplay="true"
     width="0"
