--- a/_includes/content.html
+++ b/_includes/content.html
@@ -21,7 +21,8 @@
 </ul>
 
 <h2>RSVP</h2>
-<p>Please <a href="http://goo.gl/forms/fSPbSsEVRW">send your RSVP</a> online by 1 Sept 2016.</p>
+<p>Please <a href="https://docs.google.com/forms/d/1ABwsLCvEI2NgOnZAQkOcc8Lzkpo6sVAJIWOw33FCyYs/viewform
+  ">send your RSVP</a> online by 1 Sept 2016.</p>
 
 <p>If you have any questions, please <a href="mailto:wearejasonandwinnie@gmail.com" onmouseover="this.href=this.href.replace(/z/g, '');">email us</a>.</p>
 
