switch out email and change to sms

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -24,8 +24,6 @@
 <p>Please <a href="https://docs.google.com/forms/d/1ABwsLCvEI2NgOnZAQkOcc8Lzkpo6sVAJIWOw33FCyYs/viewform
   ">send your RSVP</a> online by 1 Sept 2016.</p>
 
-<p>If you have any questions, please <a href="mailto:wearejasonandwinnie@gmail.com" onmouseover="this.href=this.href.replace(/z/g, '');">email us</a>
-  <br>
-  You can also send us a text message at 9698 4213 (Jason) or 8448 3606 (Winnie)</p>
+<p>If you have any questions, please send a text message at 9698 4213 (Jason) or 8448 3606 (Winnie)</p>
 
 <hr />
