--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css" integrity="sha384-XXXXXXXX" crossorigin="anonymous">
 
   <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
