--- a/_includes/content.html
+++ b/_includes/content.html
@@ -24,6 +24,6 @@
 <p>Please <a href="https://docs.google.com/forms/d/1ABwsLCvEI2NgOnZAQkOcc8Lzkpo6sVAJIWOw33FCyYs/viewform
   ">send your RSVP</a> online by 1 Sept 2016.</p>
 
-<p>If you have any questions, please send a text message at 9698 4213 (Jason) or 8448 3606 (Winnie)</p>
+<p>If you have any questions, please send a text message to 9698 4213 (Jason) or 8448 3606 (Winnie)</p>
 
 <hr />
