--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,27 +1,27 @@
-<embed src="assets/music.mp3"
+<!-- <embed src="assets/music.mp3"
     loop="true"
     autoplay="true"
     width="0"
     height="0">
-</embed>
+</embed> -->
 
 <h2>Information</h2>
 <p><strong>When</strong>: 12 November 2016 (Saturday)</p>
 <p><strong>Where</strong>: Grace Assembly of God Church <br>
-  <b>1 Bukit Batok West Ave 4 Singapore 659125 </b> <a href="https://www.google.com.sg/maps/dir//1+Bukit+Batok+West+Avenue+4,+659125/@1.3616181,103.7404763,15.48z/data=!4m9!4m8!1m0!1m5!1m1!1s0x31da1034b3008f5f:0xad6f11974ff293f4!2m2!1d103.747213!2d1.364453!3e0"> [Map] </a>
+  <b>1 Bukit Batok West Ave 4 Singapore 659125 </b>
   <a href="https://www.google.com.sg/maps/dir//1+Bukit+Batok+West+Avenue+4,+659125/@1.3616181,103.7404763,15.48z/data=!4m9!4m8!1m0!1m5!1m1!1s0x31da1034b3008f5f:0xad6f11974ff293f4!2m2!1d103.747213!2d1.364453!3e0"> [Getting there] </a>
 
 
 <h2>Details</h2>
 <ul>
-  <li>Ceremony begins at 10:30 am</li>
+  <li>Ceremony begins at 10.30am. Please be seated by 10.15am.</li>
   <li>Reception and Lunch immediately follow</li>
   <li>Semiformal</li>
   <li>Rain or Shine</li>
 </ul>
 
 <h2>RSVP</h2>
-<p>Please <a href="https://docs.google.com/forms/d/1ABwsLCvEI2NgOnZAQkOcc8Lzkpo6sVAJIWOw33FCyYs/viewform
+<p>Please <a href="https://docs.google.com/forms/d/e/1FAIpQLScJ3jpyfbLZ7Pn1Hmuxki1sd9PSbcW1qJKRw5ivnY_e9xMrlg/viewform
   ">send your RSVP</a> online by 1 Sept 2016.</p>
 
 <p>If you have any questions, please send a text message to 9698 4213 (Jason) or 8448 3606 (Winnie)</p>
