added add to calendar

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -6,7 +6,22 @@
 </embed> -->
 
 <h2>Information</h2>
-<p><strong>When</strong>: 12 November 2016 (Saturday)</p>
+<p><strong>When</strong>: 12 November 2016 (Saturday)
+  <div title="" class="addeventatc" id="addeventatc1" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0" style="visibility: visible;">
+      Add to Calendar
+      <span class="start">11/12/2016 10:00 AM</span>
+      <span class="end">11/12/2015 1:00 PM</span>
+      <span class="timezone">Singapore</span>
+      <span class="title">Jason & Win Nie Wedding</span>
+      <span class="description">Grace Assembly of God Church
+1 Bukit Batok West Ave 4 Singapore 659125</span>
+      <span class="location">Grace Assembly of God Church</span>
+      <span class="organizer">Jason & Win Nie</span>
+      <span class="organizer_email">look2j@gmail.com</span>
+      <span class="all_day_event">false</span>
+      <span class="date_format">MM/DD/YYYY</span>
+  </div>
+</p>
 <p><strong>Where</strong>: Grace Assembly of God Church <br>
   <b>1 Bukit Batok West Ave 4 Singapore 659125 </b>
   <a href="https://www.google.com.sg/maps/dir//1+Bukit+Batok+West+Avenue+4,+659125/@1.3616181,103.7404763,15.48z/data=!4m9!4m8!1m0!1m5!1m1!1s0x31da1034b3008f5f:0xad6f11974ff293f4!2m2!1d103.747213!2d1.364453!3e0"> [Getting there] </a>
