edit the text on index.html

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -36,7 +36,9 @@
 </ul>
 
 <h3>Parking</h3>
-  Kindly park your vehicle at the nearby carparks because there are limited parking slot at the church.
+<p>
+  Kindly park your vehicle at the nearby carparks as there are limited parking slot at the church. We seek your understanding in this matter.
+</p>
 
 
 <h3>Questions</h3>
@@ -51,7 +53,7 @@
   <li>Simply tag <a href="https://www.facebook.com/search/top/?q=%23jasonwinnie">#jasonwinnie</a> to the photos on facebook.</li>
   <li>you can send it to her <b><a href="http://fb.com/LimWinNie">via facebook messenger.</a></b></li>
   <li>you can upload to <b><a href="https://www.wetransfer.com ">wetransfer</a></b> and send it to her email at look2j@gmail.com</li>
-  <li>Transfer to Win nie via whatsapp (+65 8448 3606)</li>
+  <li>Transfer to Win Nie via whatsapp (+65 8448 3606)</li>
 </ol>
 
 <hr />
