--- a/assets/main.scss
+++ b/assets/main.scss
@@ -74,8 +74,8 @@ since it must be aligned with the content */
 }
 
 .logo {
-	width: 300px;
-	height: 300px;
+	width: 100%;
+	height: 100%;
 	display: inline-block;
 	background-size: cover;
 }
